# personal

./: .gitattributes  .gitignore  README.md
36_cards/: 36_cards.py
aliquot/: Aliquot.java
bandwidth/: Makefile  bw.c  bw.cpp  stream.c
buckets/: Main.java
cg/: Cargo.toml
chem_speller/: chem-speller.py
codegen/: Main.java
compression/: Main.java
conjugate_gradient/: Cargo.toml
crawler/: crawler.py
cuthill_mckee/: Cargo.toml
diet/: Main.java
disk_bench/: Cargo.toml
escaping_the_black_hole/: .clang-format  Makefile  cards.hpp  game.hpp  main.cpp  players.hpp  utils.hpp
gitstats/: Cargo.toml
kmeans/: Cargo.toml
kruskal_clustering/: Cargo.toml
lev/: Makefile  lev.cpp
linear_regression/: Cargo.toml
magicsquare/: magicsquare.c
matmul/: Makefile  MatMul.java  matmul.cpp
merge/: Main.java
mergesort/: README.md  linked_list.c  linked_list.h  mergesort.c  ms_array.c  ms_array.h  ms_ll.c  ms_ll.h
min/: Main.java
mincorr/: mincorr.c
mulper/: MulPer.java
multiply_strings/: Main.java
necklace/: necklace.py
orologio/: orologio.py
parallel_file/: parallel_file.c
paroliere/: paroliere.c  trie.c  trie.h
pca/: Cargo.toml
pca_compression/: Cargo.toml
pca_compression/common/: Cargo.toml
pca_compression/common/benches/: conversion_benchmarks.rs
pca_compression/common/src/: compression.rs  conversion.rs  lib.rs  pca.rs
pca_compression/pcaunzip/: Cargo.toml
pca_compression/pcaunzip/src/: main.rs
pca_compression/pcazip/: Cargo.toml
pca_compression/pcazip/src/: main.rs
poly/: Main.java
quad-tree/: quad_tree.c
(+31 files in other folders)
