[workspace]
members = [
  "common",
  "pcazip",
  "pcaunzip"
]
resolver = "3"

[workspace.dependencies]
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.11"

[profile.release]
debug-assertions = false
opt-level = 3

[profile.dev]
debug-assertions = true
opt-level = 0

[profile.test]
debug-assertions = true
opt-level = 0
strip = "none"
overflow-checks = true

[profile.bench]
debug-assertions = false
opt-level = 3
