[package]
edition = "2024"
name = "common"
version = "0.1.0"

[dependencies]
bitbuffer = "0.11.2"
log = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
rand = "0.9.2"
rstest = "0.26.1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "conversion_benchmarks"
harness = false
